# scitex-writer

./: .compile_start_time  .env.example  .envrc  .gitattributes  .gitignore  .readthedocs.yaml  AI_AGENT_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPROVEMENTS_SUMMARY.md  LICENSE  Makefile  README.md  README_v01.md  TODO.md  codecov.yml  compile  compile.sh  compile_manuscript  compile_revision  compile_supplementary  compiled_v010.tex  main  manuscript_v015.tex  pyproject.toml  pytest.ini  scitex-writer.def
.claude/: agents
.github/ci/: build-in-sif.sh  publish-in-sif.sh  run-in-sif.sh
.github/workflows/: auto-merge-to-develop.yaml  ci.yml  citation-style-test.yml  cla.yml  compilation-demo.yml  compile-test.yml  comprehensive-tests.yml  docs.yml  import-smoke-on-ubuntu-py3-12.yml  install-test.yml  lint.yml  newb-docs-quality-on-ubuntu-latest.yml  pr-ci.yml  publish-pypi.yml  pypi-publish-and-github-release-on-tag.yml  pytest-matrix-on-ubuntu-py3-11-3-12-3-13.yml  python-tests.yml  quality-audit-on-ubuntu-latest.yml  release-ci.yml  rtd-sphinx-build-on-ubuntu-latest.yml  scitex-writer-quality-audit-on-ubuntu-latest.yml  sdist-wheel-import-on-ubuntu-py3-12.yml  sync-main-to-release-tag-on-push.yml  test.yml
.scitex/dev/: config.yaml
.tmp/: analyze_gaps.py  enrich_second_pass.py  import_to_library.py  merge_and_enrich_bibtex.py  validate_dois.py
00_shared/: README.md  ai2_prompt.md  ai2_prompt_data.json  authors.tex  claims.json  claims_rendered.tex  journal_name.tex  keywords.tex  scitex_writer_version.tex  title.tex
00_shared/bib_files/: FINAL_REPORT.md  README.md  bibliography.bib  by_claude.bib  by_gemini.bib  by_gpt5.bib  cited_states.json  enriched_all.bib  enriched_all_v2.bib  field_background.bib  merged_all.bib  methods_refs.bib  my_papers.bib  related_work.bib  scitex-system.bib
00_shared/latex_styles/: bibliography.tex  clew_presentation.tex  columns.tex  dark_mode.tex  formatting.tex  linker.tex  packages.tex  signature_footer.tex
00_shared/scholar/: library
01_manuscript/: README.md  base.tex  diff.tex  manuscript.tex  manuscript_diff.tex
01_manuscript/archive/: .manuscript.tex  .manuscript_diff.tex  .version_counter.txt  manuscript_v001.tex  manuscript_v001_diff.tex  manuscript_v002.tex  manuscript_v002_diff.tex  manuscript_v003.tex  manuscript_v003_diff.tex  manuscript_v004_diff.tex  manuscript_v005.tex  manuscript_v005_diff.tex  manuscript_v006.tex  manuscript_v006_diff.tex  manuscript_v007_diff.tex  manuscript_v008.tex  manuscript_v008_diff.tex  manuscript_v009.tex  manuscript_v009_diff.tex  manuscript_v010.tex  manuscript_v010_diff.tex  manuscript_v011.tex  manuscript_v011_diff.tex  manuscript_v012.tex  manuscript_v012_diff.tex  manuscript_v013.tex  manuscript_v013_diff.tex  manuscript_v014.tex  manuscript_v014_diff.tex  manuscript_v015.tex  manuscript_v015_diff.tex  manuscript_v016.tex  manuscript_v016_diff.tex  manuscript_v017.tex  manuscript_v017_diff.tex  manuscript_v018.tex  manuscript_v018_diff.tex  manuscript_v019.tex  manuscript_v019_diff.tex  manuscript_v020.tex  (+163 more)
01_manuscript/contents/: abstract.tex  abstract_v01.tex  additional_info.tex  authors.tex  bibliography.bib  data_availability.tex  discussion.tex  discussion_v01.tex  graphical_abstract.tex  highlights.tex  highlights_revised.tex  introduction.tex  introduction_v01.tex  latex_styles  methods.tex  methods_v01.tex  results.tex  results_v01.tex  wordcount.tex
01_manuscript/docs/: SciWriteAbstract.md  three-engine-architecture.md
01_manuscript/src/: discussion.tex  discussion_revised.tex  introduction.tex  keywords.tex  methods.tex  wordcount.tex
01_manuscript/versions/: .manuscript.tex  compiled_v002.tex  compiled_v006.tex  compiled_v007.tex  compiled_v008.tex  compiled_v009.tex  compiled_v011.tex  compiled_v012.tex  compiled_v013.tex  diff_v010.tex  diff_v011.tex  diff_v015.tex  manuscript_v002.tex  manuscript_v004.tex  manuscript_v007.tex  manuscript_v008.tex  (+2 more)
02_supplementary/: README.md  base.tex  supplementary.tex  supplementary_diff.tex
03_revision/: README.md  base.tex  revision.tex
GITIGNORED/: GIT_ROOT_IS_DANGEROUS.md
config/: config_manuscript.src  config_manuscript.yaml  config_revision.yaml  config_supplementary.yaml  load_config.sh  logging.conf  version_control.conf
demo/: clew_demo.tex  clew_rendered.sample.tex
docs/: .TO_CLAUDE.md  00_INDEX.md  01_GUIDE_AGENTS.md  01_GUIDE_BIBLIOGRAPHY.md  01_GUIDE_CONTENT_CREATION.md  01_GUIDE_INSTALLATION.md  01_GUIDE_QUICK_START.md  02_ARCHITECTURE_IMPLEMENTATION.md  03_DESIGN_SEVERITY_MODEL_CONTRACT.md  03_RESEARCH_TERMINOLOGY.md  04_DESIGN_PDF_ANNOTATION_FEEDBACK_LOOP.md  04_EXTERNAL_RESOURCES.md  07_IMPLEMENTATION_SUMMARY.md  AI_AGENT_GUIDE.md  A_IMPLEMENTATION.md  COMPILATION_GUIDE.md  CROSS_REFERENCING.md  FIGURE_TABLE_GUIDE.md  FROM_OPENAI.md  GIT_COMMIT_DETAILS.md  GIT_VERSION_CONTROL_QUICKSTART.md  G_AGENTS.md  G_QUICK_START.md  IMPLEMENTATION_SUMMARY.md  LOGGING.md  LOGGING_IMPROVEMENTS.md  MCP_TOOLS.md  MIGRATION_PLAN_GIT_VERSION_CONTROL.md  MULTIPANEL_FIGURE_GUIDE.md  NAMING_CONVENTIONS.md  PLAN.md  QUICK_REFERENCE.md  R_TERMINOLOGY.md  TEST_SYNC_GUIDE.md  TO_CLAUDE.md  USAGE_FOR_LLM.md  X_EXTERNAL_RESOURCES.md  compilation_log.txt
examples/: 00_run_all.sh  01_compile_manuscript.sh  02_mcp_tools.sh  03_python_api.py  README.md  README_MULTIPANEL.md  advanced_multipanel_figure.py  basic_revision.py  check_terms.py  complete_workflow.sh  figure_workflow.py  generate_multipanel_figure.py  insert_citations.py  multipanel_helper.py  referencing_examples.tex  scitex-writer-v2.2.0-demo.org  using_python_api.py  using_tikz_figures.py
manuscript/: README.md  RENAME.md  base.tex  compiled.tex  config.src  config.yaml  diff.tex  structure.tex
requirements/: README.md  install.sh  python.txt  system-debian.txt  system-macos.txt
scripts/: README.md  compile-all.sh  generate_demo_previews.sh  init_project.sh  update.sh
shared/: authors.tex  bibliography.bib  keywords.tex  title.tex
tests/: README.md  __init__.py  conftest.py  run_all_tests.sh  sync_tests_with_source.sh  test__cli_install.py
(+1454 files in other folders)
