[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scitex-writer"
version = "2.17.0"
description = "LaTeX manuscript compilation system for scientific documents with MCP server"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.10"
authors = [
    { name = "Yusuke Watanabe", email = "ywatanabe@scitex.ai" },
]
keywords = [
    "latex",
    "manuscript",
    "scientific-writing",
    "compilation",
    "bibliography",
    "bibtex",
    "academic",
    "paper",
    "mcp",
    "mcp-server",
    "scitex",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
dependencies = [
    "click>=8.0",
    "fastmcp>=2.0.0",
    "scitex-dev>=0.1.0",
    "django>=4.2",
    # scitex-ui ships `standalone_shell.html` + shell CSS that the editor
    # and viewer templates extend. Loading either page without scitex-ui
    # installed raises TemplateDoesNotExist.
    "scitex-ui>=0.1.0",
    # Pillow powers the thumbnail service for figure/table previews in the
    # editor's insert panel. Core — removing it breaks `api/thumbnail` and
    # the fig/table grid renders empty rectangles.
    "pillow>=9.0",
]

[project.optional-dependencies]
desktop = [
    "pywebview>=4.0.0",
]
editor = []
scholar = [
    "scitex-scholar>=1.2.1",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pre-commit>=3.5.0",
    # Optional features whose tests live in the suite — installed in [dev]
    # so a fresh `pip install -e .[dev]` runs the full suite. Production
    # users opt in via `pip install scitex-writer[scholar]`. See
    # _skills/general/01_ecosystem_02_dependency-and-version-pinning.md
    # `[dev]` extras completeness.
    "scitex-scholar",     # tested via [scholar] integration tests
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.25",
]
all = [
    "scitex-writer[desktop]",
    "scitex-writer[editor]",
    "scitex-writer[scholar]",
]

[project.scripts]
scitex-writer = "scitex_writer._cli:main"

[project.entry-points."scitex_dev.docs"]
scitex-writer = "scitex_writer"

[project.entry-points."scitex_dev.skills"]
scitex-writer = "scitex_writer"

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-writer"
Documentation = "https://scitex-writer.readthedocs.io"
Repository = "https://github.com/ywatanabe1989/scitex-writer.git"
Issues = "https://github.com/ywatanabe1989/scitex-writer/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/scitex_writer"]

[tool.hatch.build.targets.sdist]
# Ship only the Python package + project metadata in sdist. Top-level
# manuscript / scratch directories (00_shared, 01_manuscript, …) contain
# absolute-path symlinks (00_shared/scholar/library → ~/.scitex/scholar/library)
# that tarfile rejects, and aren't useful in a wheel anyway.
include = [
    "src/scitex_writer",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "pyproject.toml",
]
exclude = [
    "00_shared",
    "01_manuscript",
    "02_supplementary",
    "03_revision",
    ".scitex",
    "config",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
omit = [
    "src/scitex_writer/_django/*",
    "src/scitex_writer/_mcp/handlers/*",
    "src/scitex_writer/_mcp/tools/*",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.scitex-linter]
library_dirs = ["src", "tests", "examples"]

[tool.ruff.lint.per-file-ignores]
# Legacy scripts - more lenient
"scripts/python/*.py" = [
    "E402",  # module level import not at top (scripts have docstrings)
    "E722",  # bare except (legacy code)
    "F401",  # unused import (PIL check pattern)
]

[tool.scitex_dev.audit]
# PS-168 — Per-package secret + env-var prefix in GitHub Actions workflows.
# `GH_PERSONAL_ACCESS_TOKEN` is the ecosystem-wide cross-cutting PAT used
# by the contributor-assistant CLA action. The natural GITHUB_* namespace
# is reserved by GitHub Actions on the secret-name surface (HTTP 422 on
# every `gh secret set`), so the GH_ shorthand is the canonical
# substitute and is registered ecosystem-wide via PR #122 on scitex-dev
# (EXCEPTION_SECRETS_DEFAULT). This per-package entry pins the same
# exception inline so the audit passes on every scitex-dev version,
# independent of release timing.
ps168_secret_exceptions = ["GH_PERSONAL_ACCESS_TOKEN"]
