[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scitex-writer"
version = "2.35.0"
description = "LaTeX manuscript compilation system for scientific documents with MCP server"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.10"
authors = [
    { name = "Yusuke Watanabe", email = "ywatanabe@scitex.ai" },
]
keywords = [
    "latex",
    "manuscript",
    "scientific-writing",
    "compilation",
    "bibliography",
    "bibtex",
    "academic",
    "paper",
    "mcp",
    "mcp-server",
    "scitex",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
dependencies = [
    "click>=8.0",
    "fastmcp>=2.0.0",
    # FLOOR IS 0.30.0, not 0.11.7: `_cli/commands/__init__.py` imports
    # `attach_shell_completion` from the PUBLIC `scitex_dev.cli` (in its
    # __all__, behind a lazy re-export) rather than the private
    # `_cli._completion`. That public name does not exist on older releases,
    # and the import is deliberately UNGUARDED — scitex-dev is a hard
    # dependency, so a guard would swallow a real breakage rather than cover a
    # missing optional. Below this floor the CLI fails to import at all, which
    # is why the floor has to carry the promise instead of a try/except.
    "scitex-dev>=0.30.0",
    "django>=4.2",
    # scitex-ui ships `standalone_shell.html` + shell CSS that the editor
    # and viewer templates extend. Loading either page without scitex-ui
    # installed raises TemplateDoesNotExist.
    #
    # FLOOR IS 0.5.1, not 0.1.0: settings.py registers the context processor
    # `scitex_ui.context_processors.element_inspector`, and that module does
    # not exist before 0.5.x. With the old >=0.1.0 floor, pip happily
    # installed 0.4.5 and the editor 500'd at RENDER time with
    # ModuleNotFoundError — a runtime failure that should have been an
    # install-time resolution failure. Raise this floor whenever settings.py
    # starts consuming a newer scitex-ui symbol.
    "scitex-ui>=0.5.1",
    # Pillow powers the thumbnail service for figure/table previews in the
    # editor's insert panel. Core — removing it breaks `api/thumbnail` and
    # the fig/table grid renders empty rectangles.
    "pillow>=9.0",
]

[project.optional-dependencies]
# ALL OR NOTHING — one feature extra, deliberately.
#
# There used to be three fine-grained extras (`desktop`, `editor`, `scholar`).
# They asked the user to predict, at install time, which of writer's features
# they would eventually want — and got it wrong in the worst way: `editor` was
# declared EMPTY while the code told anyone missing scitex-app to run
# `pip install scitex-writer[editor]`. That remedy installed NOTHING. The user
# ran the fix we handed them, stayed exactly as broken, and the editor kept
# serving degraded. An install instruction that resolves to a no-op is worse
# than none, because they believe they have already tried it.
#
# The fleet rule (operator, 2026-07-13) is now: a user decides ALL or NOTHING.
# `pip install scitex-writer` gives the compile engine; `[all]` gives every
# feature. No menu of half-states to get wrong. `dev` / `docs` remain, because
# those are for people building writer, not using it.
all = [
    # Desktop window for `gui open --desktop`.
    "pywebview>=4.0.0",
    # The workspace shell the editor server runs inside
    # (`scitex_app.embed.run_standalone`) and the Django AppConfig base
    # (`scitex_app.embed.ScitexAppConfig`).
    #
    # FLOOR IS 0.4.0, not lower: that is the first release exposing the public
    # `scitex_app.embed` module. Below it the import falls through the
    # ImportError guard and the editor silently degrades to a shell-less server.
    "scitex-app>=0.4.0",
    # >=1.5.0 was a HARD floor, not a preference: before 1.5.0 a metadata-nesting
    # bug in scitex-scholar meant `verify_cites` could never return VERIFIED for
    # ANY citation, so the `citation_trust` check could only ever emit warnings.
    #
    # 1.5.2 raises it again, and this floor is about CORRECTNESS, not features.
    # Before it, a citation with no identifier could resolve by a fuzzy TITLE
    # SEARCH against a live index — so the SAME .bib entry could classify
    # VERIFIED on one run and UNVERIFIED on the next, silently, with nothing in
    # the output admitting it had guessed. A non-deterministic verifier is not a
    # verifier. 1.5.2 requires VERIFIED to be backed by a real identifier
    # (doi / arXiv id / corpus id); a title-only match caps at UNVERIFIED with a
    # reason. Live-verified across all four forms (doi, bare eprint, title-only,
    # fabricated).
    "scitex-scholar>=1.5.2",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pre-commit>=3.5.0",
    # Feature deps whose tests live in the suite, so a fresh
    # `pip install -e .[dev]` runs the FULL suite. Production users get these
    # via `[all]`. See _skills/general/
    # 01_ecosystem_02_dependency-and-version-pinning.md `[dev]` extras
    # completeness.
    #
    # Same >=1.5.2 floor as `[all]`: a fresh `pip install -e .[dev]` in CI must
    # get a scholar whose verify_cites can actually return VERIFIED.
    "scitex-scholar>=1.5.2",
    "scitex-app>=0.4.0",  # editor tests need the workspace shell
    "openpyxl",           # writes the .xlsx fixture for the tables xlsx stage
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.25",
]
[project.scripts]
scitex-writer = "scitex_writer._cli:main"

[project.entry-points."scitex_dev.docs"]
scitex-writer = "scitex_writer"

[project.entry-points."scitex_dev.skills"]
scitex-writer = "scitex_writer"

[project.entry-points."scitex_dev.system_deps"]
scitex-writer = "scitex_writer._core._system_deps:provide"

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-writer"
Documentation = "https://scitex-writer.readthedocs.io"
Repository = "https://github.com/ywatanabe1989/scitex-writer.git"
Issues = "https://github.com/ywatanabe1989/scitex-writer/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/scitex_writer"]

[tool.hatch.build.targets.sdist]
# Ship only the Python package + project metadata in sdist. Top-level
# manuscript / scratch directories (00_shared, 01_manuscript, …) contain
# absolute-path symlinks (00_shared/scholar/library → ~/.scitex/scholar/library)
# that tarfile rejects, and aren't useful in a wheel anyway.
include = [
    "src/scitex_writer",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "pyproject.toml",
]
# Anchor every pattern to the repo root with a leading "/". Hatchling
# treats an UNANCHORED name as gitignore-style "match at ANY depth", so a
# bare "config" also excluded src/scitex_writer/_dataclasses/config/ — which
# shipped every wheel 2.18.0–2.26.0 without WriterConfig and broke
# `import scitex_writer.writer` on clean installs (prod outage 2026-07-08).
# These are all top-level scratch dirs; anchoring keeps them out of the
# sdist without reaching into the package tree.
exclude = [
    "/00_shared",
    "/01_manuscript",
    "/02_supplementary",
    "/03_revision",
    "/.scitex",
    "/config",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
parallel = true
source = ["scitex_writer"]
concurrency = ["multiprocessing", "thread"]
omit = [
    "src/scitex_writer/_django/*",
    "src/scitex_writer/_mcp/handlers/*",
    "src/scitex_writer/_mcp/tools/*",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.scitex-linter]
library_dirs = ["src", "tests", "examples"]

[tool.ruff.lint.per-file-ignores]
# Legacy scripts - more lenient
"scripts/python/*.py" = [
    "E402",  # module level import not at top (scripts have docstrings)
    "E722",  # bare except (legacy code)
    "F401",  # unused import (PIL check pattern)
]
